Domibus 3.3-RC1
- Spring services are always executing within a transaction even if there is no specific @Transactional annotation present
- Quartz integration with managed threads in WebLogic and WildFly
- During submit operation, Domibus verifies that the message is being sent by the same party as the one configured as the sending access point.
- During MSH dispatch, Domibus verifies the validity of sender's certificate.
- During MSH receive, Domibus verifies the trust of the sender.
- Domibus MSH sendMessage would trim the leading and trailing whitespaces in all the request fields.
- Domibus MSH sendMessage verifies that - if MessageId and RefToMessageId is specified by backend client, then it should contain only printable ASCII characters.
- Validation on MessageId and RefToMessageId can be bypassed by removing the key "domibus.sendMessage.messageIdPattern" from configuration file.
- Result set of ListPendingMessages operation limited by a new configuration property - domibus.listPendingMessages.maxCount
- While submitting the message, validation comparisons with the PMode data are made case insensitive.
Domibus 3.2.1
- JMX access to the JMS queues is secured
- Force the usage of the apache commons IO library from the application
- Possibility to load the logging configuration file from ${domibus.conf.location} for WebLogic/WildFly/Tomcat
Domibus 3.2-FR
- Added authentication/authorization example to the WS default plugin. Disabled by default, to assure backwards compatibility with older versions.
- Added XSD validation of the PMODE when it is uploaded by the user.
- Fixed the filtering and the pagination on the "Message Log" page
- Changed table names to be all UPPERCASE to fix the issue related to case sensitivity on Linux.
- Fixed the download message request issue when the schema validation and MTOM are both enabled.
- Schema validation for all WS operations is enabled by default. MTOM is disabled by default.