@@ -1,8 +1,29 @@
 Domibus 3.3-RC1 (from 3.2.1):
-               -  in file "\domibus\conf\domibus\domibus-configuration.xml":
+               Replace the Domibus war and the plugin(s) jar(s) into "\domibus\conf\domibus\plugins\lib"
+               - in the file pom.xml of the custom plugin maven module:
+                   o remove the following dependency:
+                         <dependency>
+                            <groupId>commons-logging</groupId>
+                            <artifactId>commons-logging</artifactId>
+                            <scope>provided</scope>
+                        </dependency>
+               - in the location "\conf\domibus" delete the log4j.properties file and copy the logback.xml distributed in the domibus configuration specific to each server
+               - in file "\conf\domibus\plugins\config\ws-plugin.xml" locate the following section and add the interceptors:
+                    <jaxws:endpoint id="backendInterfaceEndpoint" implementor="#backendWebservice" address="/backend">
+                        ........................
+                         <jaxws:outInterceptors>
+                            <ref bean="clearAuthenticationMDCInterceptor"/>
+                        </jaxws:outInterceptors>
+                        <jaxws:outFaultInterceptors>
+                            <ref bean="clearAuthenticationMDCInterceptor"/>
+                        </jaxws:outFaultInterceptors>
+
+                    </jaxws:endpoint>
+
+               - in file "\conf\domibus\domibus-configuration.xml":
                     o   add   <prop key="domibus.listPendingMessages.maxCount">500</prop>
                     o   add   <prop key="domibus.sendMessage.messageIdPattern">^[\x20-\x7E]*$</prop>
-               - [Tomcat only] in file conf/domibus/domibus-datasources.xml add the following bean(please adapt the values for for host, port, username and password properties according to your database schema):
+               - [Tomcat only] in file "\conf\domibus\domibus-datasources.xml" add the following bean(please adapt the values for for host, port, username and password properties according to your database schema):
                    o for MySQL:
                        <bean id="domibusJDBC-nonXADataSource" class="org.springframework.jdbc.datasource.DriverManagerDataSource">
                            <property name="driverClassName" value="com.mysql.jdbc.Driver"/>
@@ -18,13 +39,13 @@ Domibus 3.3-RC1 (from 3.2.1):
                           <property name="password" value="edelivery_password"/>
                        </bean>
                 - [WebLogic only]
-                   o execute the WLST API script(from conf/domibus/scripts/upgrades) 3.2.1-to-3.3-RC1-WeblogicSingleServer.properties for single server deployment or 3.2.1-to-3.3-RC1-WeblogicCluster.properties for cluster deployment
-                   o in file conf/domibus/domibus-datasources.xml add the following bean:
+                   o execute the WLST API script(from "\conf\domibus\scripts\upgrades") 3.2.1-to-3.3-RC1-WeblogicSingleServer.properties for single server deployment or 3.2.1-to-3.3-RC1-WeblogicCluster.properties for cluster deployment
+                   o in file "\conf\domibus\domibus-datasources.xml" add the following bean:
                          <bean id="domibusJDBC-nonXADataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
                             <property name="jndiName" value="jdbc/cipaeDeliveryNonXADs"/>
                         </bean>
                 - [WildFly only]
-                    o in file cef_edelivery_path/domibus/standalone/configuration/standalone-full.xml:
+                    o in file "cef_edelivery_path\domibus\standalone\configuration\standalone-full.xml":
                      - add the following datasource(MySQL or Oracle) in the datasources section
                         (please adapt the values for host, port, username and password properties according to your database schema):
 
@@ -81,14 +102,14 @@ Domibus 3.3-RC1 (from 3.2.1):
                                  </concurrent>
                                  ........................
                             <subsystem xmlns="urn:jboss:domain:ee:3.0">
-                    o in file conf/domibus/domibus-datasources.xml add the following bean:
+                    o in file "\conf\domibus\domibus-datasources.xml" add the following bean:
                          <bean id="domibusJDBC-nonXADataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
                             <property name="jndiName" value="jdbc/cipaeDeliveryNonXADs"/>
                          </bean>
 ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 Domibus 3.2.1:
                - [WebLogic only]
-                  o execute the WLST API script(from conf/domibus/scripts/upgrades) 3.2-to-3.2.1-WeblogicSingleServer.properties for single server deployment or 3.2-to-3.2.1-WeblogicCluster.properties for cluster deployment
+                  o execute the WLST API script(from "\conf\domibus\scripts\upgrades") 3.2-to-3.2.1-WeblogicSingleServer.properties for single server deployment or 3.2-to-3.2.1-WeblogicCluster.properties for cluster deployment
                   o In the WebLogic console, in the page "Home >Summary of Security Realms >myrealm",  enable the flag "Use Authorization Providers to Protect JMX Access" flag; for more info please check the Administration Guide
                   o In the WebLogic console, in the page "Home >Summary of JDBC Data Sources >cipaeDeliveryDs", tab "Configuration/Connection Pool/Advanced"
                     enable the "Test Connections On Reserve" flag and add "SQL SELECT 1 FROM DUAL" in the "Test Table Name"
